[package]
name = "wreq-js"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["will-work-for-meal", "Oleksandr Herasymov"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# HTTP client with browser impersonation
wreq = { version = "6.0.0-rc.21", default-features = false, features = ["gzip", "deflate", "socks", "cookies", "json", "webpki-roots", "ws"] }
wreq-util = { version = "3.0.0-rc.7", features = ["emulation-serde"] }

# WebSocket support
futures-util = "0.3"

# Neon for Node.js bindings
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }

# Global state management
once_cell = "1.20"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
